--- a/mediaalbum/src/main/res/values/strings.xml
+++ b/mediaalbum/src/main/res/values/strings.xml
@@ -1,3 +1,81 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+    Copyright 2018 Seo Jeonggyu.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
 <resources>
-    <string name="app_name">MediaAlbum</string>
+    <string name="media_loading">Loading&#8230;</string>
+    <string name="media_converting">Loading&#8230;</string>
+    <string name="media_thumbnail">Generating thumbnails&#8230;</string>
+
+    <string name="media_not_found_image">No image items found</string>
+    <string name="media_not_found_video">No video items found</string>
+    <string name="media_not_found_album">No media items found</string>
+
+    <string name="media_camera_image_capture">Take Picture</string>
+    <string name="media_camera_video_capture">Record Video</string>
+
+    <string name="media_title">Media Album</string>
+    <string name="media_all_images">All Images</string>
+    <string name="media_all_videos">All Videos</string>
+    <string name="media_all_images_videos">All Images/Videos</string>
+
+    <string name="media_ok">OK</string>
+    <string name="media_confirm">Confirm</string>
+    <string name="media_cancel">Cancel</string>
+
+    <string name="media_check_image_little">Please select a image item.</string>
+    <string name="media_check_video_little">Please select a video item.</string>
+    <string name="media_check_album_little">Please select a media item.</string>
+    <string name="media_menu_finish">Finish</string>
+    <string name="media_check">Selected</string>
+
+    <string name="media_title_permission_failed">Permission denied</string>
+    <string name="media_permission_storage_failed_hint">No storage permission, please authorize before use.</string>
+    <string name="media_permission_camera_image_failed_hint">No Camera permission or Storage permission, please authorize before use.</string>
+    <string name="media_permission_camera_video_failed_hint">No Camera permission, Storage permission or Microphone permission, please authorize it before use.</string>
+
+    <plurals name="media_check_image_limit">
+        <item quantity="one">You can only select %1$d image item.</item>
+        <item quantity="other">You can only select %1$d image items.</item>
+    </plurals>
+
+    <plurals name="media_check_image_limit_camera">
+        <item quantity="one">You can only select %1$d image item, can\'t use camera.</item>
+        <item quantity="other">You can only select %1$d image items, can\'t use camera.</item>
+    </plurals>
+
+    <plurals name="media_check_video_limit">
+        <item quantity="one">You can only select %1$d video.</item>
+        <item quantity="other">You can only select %1$d videos.</item>
+    </plurals>
+
+    <plurals name="media_check_video_limit_camera">
+        <item quantity="one">You can only select %1$d video item, can\'t use camera.</item>
+        <item quantity="other">You can only select %1$d video items, can\'t use camera.</item>
+    </plurals>
+
+    <plurals name="media_check_album_limit">
+        <item quantity="one">You can only select %1$d media item.</item>
+        <item quantity="other">You can only select %1$d media items.</item>
+    </plurals>
+
+    <plurals name="media_check_album_limit_camera">
+        <item quantity="one">You can only select %1$d media item, can\'t use camera.</item>
+        <item quantity="other">You can only select %1$d media items, can\'t use camera.</item>
+    </plurals>
+
+    <string name="media_item_unavailable">Unavailable</string>
+    <string name="media_take_file_unavailable">Unavailable file, please try again.</string>
 </resources>
