--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,26 @@
 -->
 <resources>
     <string name="app_name">Sample</string>
+
+    <string name="btn_function_camera">Camera</string>
+    <string name="btn_function_picture">Only Pictures</string>
+    <string name="btn_function_video">Only Videos</string>
+
+    <string name="btn_plus">+</string>
+
+    <string name="title_camera">Camera</string>
+    <string name="menu_camera_image">Image</string>
+    <string name="menu_camera_video">Video</string>
+
+    <string name="title_image_select">Select image</string>
+    <string name="menu_image_select">Image</string>
+
+    <string name="title_video_select">Select video</string>
+    <string name="menu_video_select">Video</string>
+
+    <string name="checkable">Checkable Options</string>
+    <string name="canceled">Canceled</string>
+    <string name="no_selected">Please select, first.</string>
+
+    <string name="hint_image_preview_click">Click on a item to preview them.</string>
 </resources>
