--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,10 @@
     <string name="btn_add">Add</string>
     <string name="btn_cancel">Cancel</string>
 
+    <string name="question_content">Are you sure?</string>
+    <string name="question_yes">Yes</string>
+    <string name="question_no">No</string>
+
     <string name="help">Note: The app does not modify the original picture or video. However, only the user-created album structure is used.\n Deleting the original will also delete it from the app. In addition, the original remains when deleted from the app.</string>
 
 </resources>
